# to-do-list-project

./: pyproject.toml
todolist/: app.py  commands.py  infos.py  welcome.py
